--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.4"
+    "mongoose": "^5.10.3",
+    "nodemon": "^2.0.4",
+    "request": "^2.88.2"
   }
 }
